syntax = "proto3";

package heyrenee.v1;

option go_package = "github.com/HeyReneeInc/proto/golang/heyrenee/v1";

import "heyrenee/v1/messages/patient_provider.proto";
import "heyrenee/v1/messages/provider.proto";
import "heyrenee/v1/enums/specialty.proto";
import "heyrenee/v1/options/auth.proto";

// ProviderService
//
// The Provider service provides operations on Provider resources as well as PatientProviders which represent a
// relationship between a Patient user and a Provider resource.
//
// URLs
//  Scratch: heyrenee-v1-8jiz6fu6.uc.gateway.dev
service ProviderService {
  // SearchProviders returns a list of Providers based on the provided search parameters.
  rpc SearchProviders(SearchProvidersRequest) returns (SearchProvidersResponse) {}

  // CreatePatientProvider creates a specified PatientProvider.
  rpc CreatePatientProvider(CreatePatientProviderRequest) returns (heyrenee.v1.messages.PatientProvider) {}
  // UpdatePatientProvider updates a specified PatientProvider.
  rpc UpdatePatientProvider(UpdatePatientProviderRequest) returns (heyrenee.v1.messages.PatientProvider) {}
  // ListPatientProviders lists PatientProviders for a specified Patient.
  rpc ListPatientProviders(ListPatientProvidersRequest) returns (ListPatientProvidersResponse) {}
}

// Request message for SearchProviders.
message SearchProvidersRequest {
  string first_name = 1;
  string last_name = 2;
  heyrenee.v1.enums.Specialty specialty = 3;
  string city = 4;
  string state = 5;
}

// Response message for SearchProviders.
message SearchProvidersResponse {
  // The list of Providers.
  repeated heyrenee.v1.messages.Provider providers = 1;
}

// Request message for CreatePatientProvider.
message CreatePatientProviderRequest {
  // The PatientProvider to create. Required.
  heyrenee.v1.messages.PatientProvider patient_provider = 1;
}

// Request message for UpdatePatientProvider.
message UpdatePatientProviderRequest {
  // The PatientProvider to update. Required.
  heyrenee.v1.messages.PatientProvider patient_provider = 1;
}

// Request message for ListPatientProviders.
message ListPatientProvidersRequest {
  // The ID of the Patient to return PatientProviders for. Required.
  string patient_id = 1 [(heyrenee.v1.options.field_authorization) = FIELD_AUTHORIZATION_PATIENT];
  // The PatientProvider status. If specified, only PatientProviders with this status will be returned.
  heyrenee.v1.messages.PatientProviderStatus patient_provider_status = 2;
  // The PatientProvider type. If specified, only PatientProviders of this type will be returned.
  heyrenee.v1.messages.PatientProviderType patient_provider_type = 3;
}

// Response message for ListPatientProviders.
message ListPatientProvidersResponse {
  // The list of PatientProviders.
  repeated heyrenee.v1.messages.PatientProvider patient_providers = 1;
}
